# Aerocube

./: .gitignore  README.md  clearPort5005.sh  curlCommand.sh  logger.py  requirements.txt  server.crt  server.csr  server.key  server.key.orgopenssl
ImP/: README.md  startImP.py
ImP/imageProcessing/parallel/: CMakeLists.txt  GpuWrapper.pyx  gpuWrapper.py  markerDetectAccel.py  markerDetectPar.pxd  markerDetectPar.py  markerDetectPar.pyx  markerDetectPar2.py  markerDetectParGPU.cpp  markerDetectParGPU.h  markerDetectParGold.py  setupGpuWrapper.py  setupMarkerDetectPar.py  testMarkerDetectPar.py  testMarkerDetectionParallel.py
ImP/imageProcessing/parallel/cuda/: GpuWrapper.pxd  GpuWrapper.pyx  setupGpuWrapper.py
ImP/imageProcessing/parallel/cython/: GpuWrapper.pxd  GpuWrapper.pyx  pyopencv_converter.cpp
ImP/imageProcessing/parallel/tests/: testMarkerDetectPar.py  testMarkerDetectParGold.py  testMarkerDetectParPerf.py
controller/: README.md  controller.py  forwardPort.sh  mockClient.py  processUtils.py  settings.py  tcpServer.py  testClassTcpServer.py  testController.py  testTCPserver.py  testingClass.py
dataStorage/: README.md  dataStorage.py  dataStorageTests.py  settings.py  testDataStorage.py
dbController/: dbController.py  dbControllerConfig.py  dbControllerTest.py  firebase.py
eventClass/: README.md  aeroCubeEvent.py  aeroCubeEventTest.py  aeroCubeSignal.py  bundle.py  event.py  eventHandler.py  signal.py  testAeroCubeEvent.py  testBundle.py  testEventHandler.py
externalComm/: README.md  commClass.py  commClassTest.py  externalComm.py
(+93 files in other folders)
